crates/plotnik-lib/tests/03-analyze/direct_recursion/no_escape_in_capture.txt
E = (call (E) @inner)
==== diagnostics ====
error: infinite recursion: no escape path
 --> query.ptk:1:12
  |
1 | E = (call (E) @inner)
  |            ^
  |            |
  |            E references itself
  |
help: add a non-recursive branch to terminate: `[Base: ... Rec: (Self)]`
==== symbols ====
E
  E (cycle)
